✨prevent device from sleeping ⚒️update resources and workflow 🔨update README.md

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                 <input type="number" id="beats" placeholder="1 ~ 8" value="4">
                 <button class="plus"><img src="./assets/imgs/control/plus.svg" alt="+"></button>
             </div>
-            <h3>Stress First</h3>
+            <h4>Stress First</h4>
             <button id="stress">Yes</button>
         </div>
         <hr>
@@ -119,6 +119,18 @@
                 <a href="https://github.com/Lord-Turmoil/metrognome" target="_blank">
                     <img src="https://img.shields.io/badge/metrognome-GitHub-purple?style=plastic&logo=github"
                         alt="GitHub">
+                </a>
+            </div>
+            <div class="badge">
+                <a href="https://capacitorjs.com/" target="_blank">
+                    <img src="https://img.shields.io/badge/framework-Capacitor-119EFF?style=plastic&logo=capacitor"
+                        alt="Capacitor">
+                </a>
+            </div>
+            <div class="badge">
+                <a href="https://www.flaticon.com/free-icons/christmas" target="_blank">
+                    <img src="https://img.shields.io/badge/Favicon%20by%20Freepik-Flaticon-17D1C6?style=plastic"
+                        alt="Flaticon">
                 </a>
             </div>
         </div>
