--- a/src/index.html
+++ b/src/index.html
@@ -23,155 +23,173 @@
 </head>
 
 <body>
-    <header>
-        <h1>Metrognome</h1>
-    </header>
-    <hr>
-    <div class="banner">
-        <marquee behavior="scroll" direction="left">
-            <p>Metrognome, just metronome &mdash; Made with 💖 by Tony's Studio</p>
-        </marquee>
+    <div id="splash">
+        <img src="assets/imgs/logo.png" alt="logo">
     </div>
-    <hr>
-    <div class="main">
-        <!-- BPM -->
-        <div class="section">
-            <h3>BPM</h3>
-            <input type="number" id="bpm" placeholder="30 ~ 240" value="60">
-            <div id="bpm-ctrl">
-                <ul>
-                    <li>
-                        <button class="minus"><img src="./assets/imgs/control/minus-5.png" alt="-5"></button>
-                    </li>
-                    <li>
-                        <button class="minus"><img src="./assets/imgs/control/minus-1.png" alt="-1"></button>
-                    </li>
-                    <li>&nbsp;</li>
-                    <li>
-                        <button class="plus"><img src="./assets/imgs/control/plus-1.png" alt="+1"></button>
-                    </li>
-                    <li>
-                        <button class="plus"><img src="./assets/imgs/control/plus-5.png" alt="+5"></button>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul id="dot-list">
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                </ul>
-            </div>
+    <div id="content" style="display: none;">
+        <div class="header">
+            <h1>Metrognome</h1>
+            <button id="language">
+                <img src="assets/imgs/language.svg" alt="language">
+            </button>
         </div>
         <hr>
-        <!-- Play button -->
-        <div class="section">
-            <button id="play">Play</button>
+        <div class="banner">
+            <p class="i18n" data-i18n="slogan">Metrognome, just metronome &mdash; Made with 💖 by Tony's Studio</p>
         </div>
         <hr>
-        <!-- Beats -->
-        <div class="section">
-            <h3>Beats</h3>
-            <div id="beats-ctrl">
-                <button class="minus "><img src="./assets/imgs/control/minus.svg" alt="-"></button>
-                <input type="number" id="beats" placeholder="1 ~ 8" value="4">
-                <button class="plus"><img src="./assets/imgs/control/plus.svg" alt="+"></button>
-            </div>
-            <h4>Stress First</h4>
-            <button id="stress">Yes</button>
-        </div>
-        <hr>
-        <!-- Subdivisions -->
-        <div class="section">
-            <h3 class="text-3xl my-1">Subdivisions</h3>
-            <div id="sub-box">
-                <div class="sub-row">
-                    <div class="sub-item active"><img src="./assets/imgs/sub/4.png" alt="4"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/8-8.png" alt="8-8"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/8-16-16.png" alt="8-16-16"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/16-16-8.png" alt="16-16-8"></div>
+        <div class="main">
+            <!-- BPM -->
+            <div class="section">
+                <h3 class="i18n" data-i18n="bpm.title">BPM</h3>
+                <input type="number" id="bpm" placeholder="30 ~ 240" value="60">
+                <div id="bpm-ctrl">
+                    <ul>
+                        <li>
+                            <button class="minus"><img src="./assets/imgs/control/minus-5.png" alt="-5"></button>
+                        </li>
+                        <li>
+                            <button class="minus"><img src="./assets/imgs/control/minus-1.png" alt="-1"></button>
+                        </li>
+                        <li>&nbsp;</li>
+                        <li>
+                            <button class="plus"><img src="./assets/imgs/control/plus-1.png" alt="+1"></button>
+                        </li>
+                        <li>
+                            <button class="plus"><img src="./assets/imgs/control/plus-5.png" alt="+5"></button>
+                        </li>
+                    </ul>
                 </div>
-                <div class="sub-row">
-                    <div class="sub-item"><img src="./assets/imgs/sub/16-16-16-16.png" alt="16-16-16-16"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/8-8-8.png" alt="8-8-8"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/8dot-16.png" alt="8dot-16"></div>
-                    <div class="sub-item"><img src="./assets/imgs/sub/16-8dot.png" alt="16-8dot"></div>
+                <div>
+                    <ul id="dot-list">
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                        <li class="dot"></li>
+                    </ul>
                 </div>
             </div>
-        </div>
-        <hr>
-        <!-- Sound style -->
-        <div class="section">
-            <h3>Sound Style</h3>
-            <ul id="wave-list">
-                <li class="wave-item active"><img src="./assets/imgs/control/square-wave.svg" alt="Square"></li>
-                <li class="wave-item"><img src="./assets/imgs/control/sawtooth-wave.svg" alt="Sawtooth"></li>
-                <li class="wave-item"><img src="./assets/imgs/control/sine-wave.svg" alt="Sine"></li>
-                <li class="wave-item"><img src="./assets/imgs/control/triangle-wave.svg" alt="Triangle"></li>
-            </ul>
-        </div>
-        <hr>
-        <!-- Version -->
-        <div class="section">
-            <h4 style="font-weight: lighter;">Version <span id="version">1.1.0</span></h4>
-            <div id="network-connected" style="display: none;">
-                <div id="platform-web" class="platform web" style="display: none;">
-                    <div class="download-list">
-                        <button id="web-download-android" class="download action" style="display: none;">Download
-                            Android App</button>
-                        <button id="web-download-android-mirror" class="download action" style="display: none;">Download
-                            Android App (Mirror)</button>
+            <hr>
+            <!-- Play button -->
+            <div class="section">
+                <button id="play" class="i18n" data-i18n="play.play">Play</button>
+            </div>
+            <hr>
+            <!-- Beats -->
+            <div class="section">
+                <h3 class="i18n" data-i18n="beats.title">Beats</h3>
+                <div id="beats-ctrl">
+                    <button class="minus "><img src="./assets/imgs/control/minus.svg" alt="-"></button>
+                    <input type="number" id="beats" placeholder="1 ~ 8" value="4">
+                    <button class="plus"><img src="./assets/imgs/control/plus.svg" alt="+"></button>
+                </div>
+                <h4 class="i18n" data-i18n="beats.stress">Stress First</h4>
+                <button id="stress" class="i18n" data-i18n="beats.stress.yes">Yes</button>
+            </div>
+            <hr>
+            <!-- Subdivisions -->
+            <div class="section">
+                <h3 class="i18n" data-i18n="sub.title">Subdivisions</h3>
+                <div id="sub-box">
+                    <div class="sub-row">
+                        <div class="sub-item active"><img src="./assets/imgs/sub/4.png" alt="4"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/8-8.png" alt="8-8"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/8-16-16.png" alt="8-16-16"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/16-16-8.png" alt="16-16-8"></div>
+                    </div>
+                    <div class="sub-row">
+                        <div class="sub-item"><img src="./assets/imgs/sub/16-16-16-16.png" alt="16-16-16-16"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/8-8-8.png" alt="8-8-8"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/8dot-16.png" alt="8dot-16"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/16-8dot.png" alt="16-8dot"></div>
                     </div>
                 </div>
-                <div id="platform-android" class="platform android" style="display: none;">
-                    <div id="android-latest-version">
-                        <p style="margin-top: 10px;">You are using the latest version!</p>
-                    </div>
-                    <div id="android-update-available" style="display: none;">
-                        <p style="margin-top: 10px;">New version available!</p>
+            </div>
+            <hr>
+            <!-- Sound style -->
+            <div class="section">
+                <h3 class="i18n" data-i18n="sound.title">Sound Style</h3>
+                <ul id="wave-list">
+                    <li class="wave-item active"><img src="./assets/imgs/control/square-wave.svg" alt="Square"></li>
+                    <li class="wave-item"><img src="./assets/imgs/control/sawtooth-wave.svg" alt="Sawtooth"></li>
+                    <li class="wave-item"><img src="./assets/imgs/control/sine-wave.svg" alt="Sine"></li>
+                    <li class="wave-item"><img src="./assets/imgs/control/triangle-wave.svg" alt="Triangle"></li>
+                </ul>
+            </div>
+            <hr>
+            <!-- Version -->
+            <div class="section">
+                <h4 style="font-weight: lighter;">Version <span id="version">1.1.0</span></h4>
+                <div id="network-connected" style="display: none;">
+                    <div id="platform-web" class="platform web" style="display: none;">
                         <div class="download-list">
-                            <button id="android-download-android" class="download action"
-                                style="display: none;">Download</button>
-                            <button id="android-download-android-mirror" class="download action"
-                                style="display: none;">Download (Mirror)</button>
+                            <button id="web-download-android" class="download action i18n" style="display: none;"
+                                data-i18n="version.web.download.android">
+                                Download Android App
+                            </button>
+                            <button id="web-download-android-mirror" class="download action i18n" style="display: none;"
+                                data-i18n="version.web.download.android.mirror">
+                                Download Android App (Mirror)
+                            </button>
                         </div>
                     </div>
+                    <div id="platform-android" class="platform android" style="display: none;">
+                        <div id="android-latest-version">
+                            <p style="margin-top: 10px;" class="i18n" data-i18n="version.android.latest">
+                                You are using the latest version!
+                            </p>
+                        </div>
+                        <div id="android-update-available" style="display: none;">
+                            <p style="margin-top: 10px;" class="i18n" data-i18n="version.android.update">
+                                New version available!
+                            </p>
+                            <div class="download-list">
+                                <button id="android-download-android" class="download action i18n"
+                                    style="display: none;" data-i18n="version.android.download">
+                                    Download
+                                </button>
+                                <button id="android-download-android-mirror" class="download action i18n"
+                                    style="display: none;" data-i18n="version.android.download.mirror">
+                                    Download (Mirror)
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="platform-ios" class="platform" style="display: none;"></div>
                 </div>
-                <div id="platform-ios" class="platform" style="display: none;"></div>
+                <div id="network-disconnected" style="display: none;">
+                    <p>Network unavailable :(</p>
+                </div>
             </div>
-            <div id="network-disconnected" style="display: none;">
-                <p>Network unavailable :(</p>
+        </div>
+        <hr>
+        <div class="footer clearfix">
+            <div class="badges">
+                <div class="badge">
+                    <a href="https://github.com/Lord-Turmoil/metrognome" target="_blank">
+                        <img src="https://img.shields.io/badge/metrognome-GitHub-purple?style=plastic&logo=github"
+                            alt="GitHub">
+                    </a>
+                </div>
+                <div class="badge">
+                    <a href="https://capacitorjs.com/" target="_blank">
+                        <img src="https://img.shields.io/badge/framework-Capacitor-119EFF?style=plastic&logo=capacitor"
+                            alt="Capacitor">
+                    </a>
+                </div>
+                <div class="badge">
+                    <a href="https://www.flaticon.com/free-icons/christmas" target="_blank">
+                        <img src="https://img.shields.io/badge/Favicon%20by%20Freepik-Flaticon-17D1C6?style=plastic"
+                            alt="Flaticon">
+                    </a>
+                </div>
+            </div>
+            <div class="copyright">
+                <a href="https://www.tonys-studio.top" target="_blank"><span>Copyright &copy; Tony's Studio <span
+                            id="year">2023</span></span></a>
             </div>
         </div>
     </div>
-    <hr>
-    <footer class="clearfix">
-        <div class="badges">
-            <div class="badge">
-                <a href="https://github.com/Lord-Turmoil/metrognome" target="_blank">
-                    <img src="https://img.shields.io/badge/metrognome-GitHub-purple?style=plastic&logo=github"
-                        alt="GitHub">
-                </a>
-            </div>
-            <div class="badge">
-                <a href="https://capacitorjs.com/" target="_blank">
-                    <img src="https://img.shields.io/badge/framework-Capacitor-119EFF?style=plastic&logo=capacitor"
-                        alt="Capacitor">
-                </a>
-            </div>
-            <div class="badge">
-                <a href="https://www.flaticon.com/free-icons/christmas" target="_blank">
-                    <img src="https://img.shields.io/badge/Favicon%20by%20Freepik-Flaticon-17D1C6?style=plastic"
-                        alt="Flaticon">
-                </a>
-            </div>
-        </div>
-        <div class="copyright">
-            <a href="https://www.tonys-studio.top" target="_blank"><span>Copyright &copy; Tony's Studio <span
-                        id="year">2023</span></span></a>
-        </div>
-    </footer>
     <script src="./js/index.js" type="module"></script>
 </body>
 
