✨persist user preference

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                 <h3 class="i18n" data-i18n="sub.title">Subdivisions</h3>
                 <div id="sub-box">
                     <div class="sub-row">
-                        <div class="sub-item active"><img src="./assets/imgs/sub/4.png" alt="4"></div>
+                        <div class="sub-item"><img src="./assets/imgs/sub/4.png" alt="4"></div>
                         <div class="sub-item"><img src="./assets/imgs/sub/8-8.png" alt="8-8"></div>
                         <div class="sub-item"><img src="./assets/imgs/sub/8-16-16.png" alt="8-16-16"></div>
                         <div class="sub-item"><img src="./assets/imgs/sub/16-16-8.png" alt="16-16-8"></div>
@@ -110,7 +110,7 @@
             <div class="section">
                 <h3 class="i18n" data-i18n="sound.title">Sound Style</h3>
                 <ul id="wave-list">
-                    <li class="wave-item active"><img src="./assets/imgs/control/square-wave.svg" alt="Square"></li>
+                    <li class="wave-item"><img src="./assets/imgs/control/square-wave.svg" alt="Square"></li>
                     <li class="wave-item"><img src="./assets/imgs/control/sawtooth-wave.svg" alt="Sawtooth"></li>
                     <li class="wave-item"><img src="./assets/imgs/control/sine-wave.svg" alt="Sine"></li>
                     <li class="wave-item"><img src="./assets/imgs/control/triangle-wave.svg" alt="Triangle"></li>
