--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,7 @@
     </div>
     <div id="content" style="display: none;">
         <div class="header">
-            <h1>Metrognome</h1>
-            <button id="language">
-                <img src="assets/imgs/language.svg" alt="language">
-            </button>
+            <h1 id="title">Metrognome</h1>
         </div>
         <hr>
         <div class="banner">
@@ -119,7 +116,7 @@
             <hr>
             <!-- Version -->
             <div class="section">
-                <h4 style="font-weight: lighter;">Version <span id="version">1.1.0</span></h4>
+                <h4 style="font-weight: lighter;">Version <span id="version">1.2.1</span></h4>
                 <div id="network-connected" style="display: none;">
                     <div id="platform-web" class="platform web" style="display: none;">
                         <div class="download-list">
@@ -164,6 +161,9 @@
         </div>
         <hr>
         <div class="footer clearfix">
+            <button id="language">
+                <img src="assets/imgs/language.svg" alt="language">
+            </button>
             <div class="badges">
                 <div class="badge">
                     <a href="https://github.com/Lord-Turmoil/metrognome" target="_blank">
