⚒️better DOM structure and layout

--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,16 @@
 <body>
     <div id="splash">
         <img src="assets/imgs/logo.png" alt="logo">
+        <h1>Metrognome</h1>
     </div>
     <div id="content" style="display: none;">
         <div class="header">
             <h1 id="title">Metrognome</h1>
         </div>
         <hr>
-        <div class="banner">
-            <p class="i18n" data-i18n="slogan">Metrognome, just metronome &mdash; Made with 💖 by Tony's Studio</p>
+        <div class="marquee-container">
+            <p class="marquee i18n" data-i18n="slogan">Metrognome, just metronome &mdash; Made with 💖 by Tony's Studio
+            </p>
         </div>
         <hr>
         <div class="main">
@@ -48,7 +50,6 @@
                         <li>
                             <button class="minus"><img src="./assets/imgs/control/minus-1.png" alt="-1"></button>
                         </li>
-                        <li>&nbsp;</li>
                         <li>
                             <button class="plus"><img src="./assets/imgs/control/plus-1.png" alt="+1"></button>
                         </li>
@@ -88,18 +89,14 @@
             <div class="section">
                 <h3 class="i18n" data-i18n="sub.title">Subdivisions</h3>
                 <div id="sub-box">
-                    <div class="sub-row">
-                        <div class="sub-item"><img src="./assets/imgs/sub/4.png" alt="4"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/8-8.png" alt="8-8"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/8-16-16.png" alt="8-16-16"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/16-16-8.png" alt="16-16-8"></div>
-                    </div>
-                    <div class="sub-row">
-                        <div class="sub-item"><img src="./assets/imgs/sub/16-16-16-16.png" alt="16-16-16-16"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/8-8-8.png" alt="8-8-8"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/8dot-16.png" alt="8dot-16"></div>
-                        <div class="sub-item"><img src="./assets/imgs/sub/16-8dot.png" alt="16-8dot"></div>
-                    </div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/4.png" alt="4"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/8-8.png" alt="8-8"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/8-16-16.png" alt="8-16-16"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/16-16-8.png" alt="16-16-8"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/16-16-16-16.png" alt="16-16-16-16"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/8-8-8.png" alt="8-8-8"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/8dot-16.png" alt="8dot-16"></div>
+                    <div class="sub-item"><img src="./assets/imgs/sub/16-8dot.png" alt="16-8dot"></div>
                 </div>
             </div>
             <hr>
