🐛fix icon display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="metronome, online, music, tool">
     <meta name="author" content="Tony's Studio">
     <script type="module" src="./src/vendor/ionicpwaelements.esm.js"></script>
-    <script nomodule src="./src/vendor/ionicpwaelements.js"></script>
+    <script type="module" src="./src/vendor/ionicpwaelements.js"></script>
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico"/>
     <link rel="manifest" href="./src/manifest.json"/>
     <link rel="stylesheet" href="./src/css/index.css"/>
