--- a/index.html
+++ b/index.html
@@ -178,12 +178,16 @@
             <div id="version-wrapper" class="Version expandable">
                 <div id="version-web" class="Section" style="display: none">
                     <div class="VersionWeb">
-                        <h2><span class="i18n" data-i18n="version.title"></span>&nbsp;<span class="version-text"></span>
+                        <h2>
+                            <span class="i18n" data-i18n="version.title"></span>
+                            <span class="version-text"></span>
                         </h2>
                         <div class="VersionWeb__downloads">
                             <button id="web-download-android" class="shadow-light yello-grad i18n"
                                 data-i18n="version.web.download.android">
-                                Download Android App
+                            </button>
+                            <button id="web-download-ios" class="shadow-light yello-grad i18n"
+                                data-i18n="version.web.download.ios">
                             </button>
                         </div>
                         <div class="VersionWeb__changelog">
@@ -194,8 +198,9 @@
                 </div>
                 <div id="version-android" class="Section" style="display: none">
                     <div class="VersionAndroid">
-                        <h2><span class="i18n" data-i18n="version.title"></span>&nbsp;<span
-                                class="version-text-current"></span>
+                        <h2>
+                            <span class="i18n" data-i18n="version.title"></span>
+                            <span class="version-text-current"></span>
                         </h2>
                         <div id="android-latest" class="VersionAndroid__latest" style="display: none">
                             <p class="i18n" data-i18n="version.android.latest"></p>
@@ -213,6 +218,27 @@
                             <div class="VersionWeb__changelog">
                                 <h3 class="i18n" data-i18n="version.changelog.title"></h3>
                                 <ul class="changelog android messages"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="version-ios" class="Section" style="display: none">
+                    <div class="VersioniOS">
+                        <h2>
+                            <span class="i18n" data-i18n="version.title"></span>
+                            <span class="version-text-current"></span>
+                        </h2>
+                        <div id="ios-latest" class="VersionIos__latest" style="display: none">
+                            <p class="i18n" data-i18n="version.ios.latest"></p>
+                        </div>
+                        <div id="ios-update" class="VersionIos__update" style="display: none">
+                            <p>
+                                <span class="i18n" data-i18n="version.ios.update"></span>:
+                                <span class="version-text-latest"></span>
+                            </p>
+                            <div class="VersionWeb__changelog">
+                                <h3 class="i18n" data-i18n="version.changelog.title"></h3>
+                                <ul class="changelog ios messages"></ul>
                             </div>
                         </div>
                     </div>
