⚒️refine for copyright issue

--- a/index.html
+++ b/index.html
@@ -265,13 +265,11 @@
                         <img src="./src/assets/imgs/badge/badge-capacitor.svg" alt="Capacitor">
                     </a>
                 </div>
-                <div class="badge">
-                    <a href="https://www.flaticon.com/free-icons/christmas" target="_blank">
-                        <img src="./src/assets/imgs/badge/badge-flaticon.svg" alt="Flaticon">
-                    </a>
-                </div>
             </div>
             <div class="Footer__copyright">
+                <a href="https://www.flaticon.com/free-icons/christmas" title="christmas icons">Christmas icons
+                    created by Freepik - Flaticon</a>
+                <br>
                 <a href="https://www.tonys-studio.top" target="_blank"><span>Copyright &copy; Tony's Studio <span
                             id="year">2023</span></span></a>
             </div>
