--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         src="https://tonys-studio-1308383348.cos.ap-beijing.myqcloud.com/apps/metrognome/static/ionicpwaelements.esm.js"></script>
     <script type="module"
         src="https://tonys-studio-1308383348.cos.ap-beijing.myqcloud.com/apps/metrognome/static/ionicpwaelements.js"></script>
-    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="./src/manifest.json" />
     <link rel="stylesheet" href="./src/css/index.css" />
     <link rel="stylesheet" href="./src/css/color.css">
@@ -33,7 +33,7 @@
 <body>
 
     <div id="splash">
-        <img src="./src/assets/imgs/logo.png" alt="logo">
+        <img src="imgs/logo.png" alt="logo">
         <h1>Metrognome</h1>
     </div>
 
@@ -59,22 +59,22 @@
                         <ul class="controls">
                             <li class="item">
                                 <button id="bpm-decrease-5" class="flex-center shadow-light purple-grad"><img
-                                        src="./src/assets/imgs/control/minus-5.png" alt="-5">
+                                        src="imgs/control/minus-5.png" alt="-5">
                                 </button>
                             </li>
                             <li class="item">
                                 <button id="bpm-decrease-1" class="flex-center shadow-light purple-grad"><img
-                                        src="./src/assets/imgs/control/minus-1.png" alt="-1">
+                                        src="imgs/control/minus-1.png" alt="-1">
                                 </button>
                             </li>
                             <li class="item">
                                 <button id="bpm-increase-1" class="flex-center shadow-light orange-grad"><img
-                                        src="./src/assets/imgs/control/plus-1.png" alt="+1">
+                                        src="imgs/control/plus-1.png" alt="+1">
                                 </button>
                             </li>
                             <li class="item">
                                 <button id="bpm-increase-5" class="flex-center shadow-light orange-grad"><img
-                                        src="./src/assets/imgs/control/plus-5.png" alt="+5">
+                                        src="imgs/control/plus-5.png" alt="+5">
                                 </button>
                             </li>
                         </ul>
@@ -102,7 +102,7 @@
                     <button id="tap" class="Play__button shadow-light blue-grad play i18n" data-i18n="tap.tap"
                         style="display: none"></button>
                     <div id="switch" class="Play__switch shadow-light flex-center real orange-grad">
-                        <img src="./src/assets/imgs/control/rotate.svg" alt="change">
+                        <img src="imgs/control/rotate.svg" alt="change">
                     </div>
                 </div>
             </div>
@@ -114,11 +114,11 @@
                     <h2 class="i18n" data-i18n="beats.title"></h2>
                     <div id="beats-ctrl" class="Beat__controls">
                         <button id="beats-decrease-1" class="flex-center shadow-light purple-grad"><img
-                                src="./src/assets/imgs/control/minus.svg" alt="-">
+                                src="imgs/control/minus.svg" alt="-">
                         </button>
                         <input type="number" id="beats" placeholder="1 ~ 8" value="4">
                         <button id="beats-increase-1" class="flex-center shadow-light orange-grad"><img
-                                src="./src/assets/imgs/control/plus.svg" alt="+">
+                                src="imgs/control/plus.svg" alt="+">
                         </button>
                     </div>
                     <h3 class="i18n" data-i18n="beats.stress"></h3>
@@ -135,18 +135,18 @@
                 <div class="Subdivision">
                     <h2 class="i18n" data-i18n="sub.title"></h2>
                     <div id="sub-list" class="Subdivision__list">
-                        <div class="item"><img src="./src/assets/imgs/sub/4.png" alt="4"></div>
-                        <div class="item"><img src="./src/assets/imgs/sub/8-8.png" alt="8-8"></div>
-                        <div class="item"><img src="./src/assets/imgs/sub/8-16-16.png" alt="8-16-16">
+                        <div class="item"><img src="imgs/sub/4.png" alt="4"></div>
+                        <div class="item"><img src="imgs/sub/8-8.png" alt="8-8"></div>
+                        <div class="item"><img src="imgs/sub/8-16-16.png" alt="8-16-16">
                         </div>
-                        <div class="item"><img src="./src/assets/imgs/sub/16-16-8.png" alt="16-16-8">
+                        <div class="item"><img src="imgs/sub/16-16-8.png" alt="16-16-8">
                         </div>
-                        <div class="item"><img src="./src/assets/imgs/sub/16-16-16-16.png" alt="16-16-16-16">
+                        <div class="item"><img src="imgs/sub/16-16-16-16.png" alt="16-16-16-16">
                         </div>
-                        <div class="item"><img src="./src/assets/imgs/sub/8-8-8.png" alt="8-8-8"></div>
-                        <div class="item"><img src="./src/assets/imgs/sub/8dot-16.png" alt="8dot-16">
+                        <div class="item"><img src="imgs/sub/8-8-8.png" alt="8-8-8"></div>
+                        <div class="item"><img src="imgs/sub/8dot-16.png" alt="8dot-16">
                         </div>
-                        <div class="item"><img src="./src/assets/imgs/sub/16-8dot.png" alt="16-8dot">
+                        <div class="item"><img src="imgs/sub/16-8dot.png" alt="16-8dot">
                         </div>
                     </div>
                 </div>
@@ -159,15 +159,15 @@
                     <h2 class="i18n" data-i18n="sound.title"></h2>
                     <ul id="wave-list" class="Sound__list">
                         <li class="item shadow-light flex-center green-red-grad"><img
-                                src="./src/assets/imgs/control/square-wave.svg" alt="Square"></li>
+                                src="imgs/control/square-wave.svg" alt="Square"></li>
                         <li class="item shadow-light flex-center green-red-grad"><img
-                                src="./src/assets/imgs/control/sawtooth-wave.svg" alt="Sawtooth">
+                                src="imgs/control/sawtooth-wave.svg" alt="Sawtooth">
                         </li>
                         <li class="item shadow-light flex-center green-red-grad"><img
-                                src="./src/assets/imgs/control/sine-wave.svg" alt="Sine">
+                                src="imgs/control/sine-wave.svg" alt="Sine">
                         </li>
                         <li class="item shadow-light flex-center green-red-grad"><img
-                                src="./src/assets/imgs/control/triangle-wave.svg" alt="Triangle">
+                                src="imgs/control/triangle-wave.svg" alt="Triangle">
                         </li>
                     </ul>
                 </div>
@@ -251,18 +251,18 @@
         <div class="Footer clearfix">
             <div class="Footer__language">
                 <button id="language">
-                    <img src="./src/assets/imgs/language.svg" alt="language">
+                    <img src="imgs/language.svg" alt="language">
                 </button>
             </div>
             <div class="Footer__badges">
                 <div class="badge">
                     <a href="https://github.com/Lord-Turmoil/metrognome" target="_blank">
-                        <img src="./src/assets/imgs/badge/badge-github.svg" alt="GitHub">
+                        <img src="imgs/badge/badge-github.svg" alt="GitHub">
                     </a>
                 </div>
                 <div class="badge">
                     <a href="https://capacitorjs.com/" target="_blank">
-                        <img src="./src/assets/imgs/badge/badge-capacitor.svg" alt="Capacitor">
+                        <img src="imgs/badge/badge-capacitor.svg" alt="Capacitor">
                     </a>
                 </div>
             </div>
