--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                             <button id="web-download-android" class="shadow-light yello-grad i18n"
                                 data-i18n="version.web.download.android">
                             </button>
-                            <button id="web-download-ios" class="shadow-light yello-grad i18n"
+                            <!-- <button id="web-download-ios" class="shadow-light yello-grad i18n"
                                 data-i18n="version.web.download.ios">
-                            </button>
+                            </button> -->
                         </div>
                         <div class="VersionWeb__changelog">
                             <h3 class="i18n" data-i18n="version.changelog.title"></h3>
