🐛fix multiple issues
- layout issue on android
- server name on android
- fix font issue

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                 <div class="Sound">
                     <h2 class="i18n" data-i18n="sound.title"></h2>
                     <ul id="wave-list" class="Sound__list">
-                        <li class="item shadow-light flex-center green-red-grad"><img
-                                src="imgs/control/square-wave.svg" alt="Square"></li>
+                        <li class="item shadow-light flex-center green-red-grad"><img src="imgs/control/square-wave.svg"
+                                alt="Square"></li>
                         <li class="item shadow-light flex-center green-red-grad"><img
                                 src="imgs/control/sawtooth-wave.svg" alt="Sawtooth">
                         </li>
-                        <li class="item shadow-light flex-center green-red-grad"><img
-                                src="imgs/control/sine-wave.svg" alt="Sine">
+                        <li class="item shadow-light flex-center green-red-grad"><img src="imgs/control/sine-wave.svg"
+                                alt="Sine">
                         </li>
                         <li class="item shadow-light flex-center green-red-grad"><img
                                 src="imgs/control/triangle-wave.svg" alt="Triangle">
@@ -186,9 +186,9 @@
                             <button id="web-download-android" class="shadow-light yello-grad i18n"
                                 data-i18n="version.web.download.android">
                             </button>
-                            <!-- <button id="web-download-ios" class="shadow-light yello-grad i18n"
+                            <button id="web-download-ios" class="shadow-light yello-grad i18n"
                                 data-i18n="version.web.download.ios">
-                            </button> -->
+                            </button>
                         </div>
                         <div class="VersionWeb__changelog">
                             <h3 class="i18n" data-i18n="version.changelog.title"></h3>
@@ -254,7 +254,7 @@
             </div>
         </div>
     </main>
-    
+
     <script src="src/scripts/index.ts" type="module"></script>
 
 </body>
